--- a/SBClient/wwwroot/Style/CustomerDetails.css
+++ b/SBClient/wwwroot/Style/CustomerDetails.css
@@ -1,37 +1,118 @@
 ﻿body {
+    font-family: Arial, sans-serif;
+}
+
+#customer-info {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 20px; 
+    margin: 0 auto;
+    max-width: 800px; 
 }
 
 .info-section {
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    padding: 15px;
+    border: 2px solid #03B98E; 
+    padding: 15px; 
     border-radius: 5px;
+    overflow: auto; 
+    text-align: left;
 }
 
     .info-section h2 {
-        margin-top: 0;
-        border-bottom: 1px solid #eee;
-        padding-bottom: 10px;
+        margin: 5px; 
+        border-bottom: 2px solid #03B98E; 
+        padding-bottom: 10px; 
+        background-color: black;
+        text-transform: capitalize;
     }
+
 
     .info-section p {
         margin: 5px 0;
+        text-transform: capitalize;
     }
 
 .label {
     font-weight: bold;
-    margin-right: 10px;
     color: #555;
+    margin: 5px;
 }
 
 .value {
     color: #333;
 }
 
-.CustomerDetails{
-    display: none;
+#CustomerDetails {
+    display: none; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh; 
+    text-align: center; 
+    margin:20px;
 }
 
-.AuthorizeQb{
-    display: none;
+
+#AuthorizeQb {
+    display: none; 
+    position: fixed; 
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    align-items: center; 
 }
+
+
+button {
+    padding: 10px 20px; 
+    border: none; 
+    border-radius: 10px; 
+    background-color: #03B98E; 
+    color: white; 
+    font-size: 16px; 
+    font-weight: bold; 
+    cursor: pointer; 
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease; 
+    margin: 50px;
+    width: 40%;
+    height: 50px;
+
+}
+
+
+
+
+h2 {
+    font-size: 28px; 
+    font-weight: bold; 
+    color: #03B98E; 
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); 
+    background: linear-gradient(90deg, #03B98E, #02866C, #03B98E); 
+    -webkit-background-clip: text; 
+    -webkit-text-fill-color: transparent; 
+    display: inline-block; 
+    margin: 50px; 
+}
+
+#logoutSection {
+    position: absolute; 
+    top: 5px; 
+    right: 5px; 
+}
+
+#logoutButton {
+    background: none; 
+    border: none; 
+    color: #03B98E; 
+    font-size: 16px; 
+    text-decoration: underline; 
+    cursor: pointer; 
+    padding: 0; 
+    font-weight: bold;
+    box-shadow: none;
+}
+
+    #logoutButton:hover {
+        color: #02866C; 
+    }
